Beginning Tryout component. .gitignore settings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /AEM_6.2_Quickstart.jar
 /license.properties
 /crx-quickstart
-/eaton.core/target
-/eaton.ui.apps/target
-/eaton.ui.apps.html/target
+*.settings/
+*.project
+*.classpath
+*.target/
 *.DS_Store
+README.md
+*.brackets.json
