--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-filenamelist": "1.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.3",
