[Frontend-env] Add helper NPM scripts with common tasks

--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "author": "Razorfish",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "maven": "cd ../ && mvn -PautoInstallPackage clean install",
+    "aemdev": "gulp build:dev",
+    "preaemprod": "npm install --no-optional",
+    "aemprod": "gulp build:prod"
   },
   "repository": {
     "type": "git",
