--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -21,8 +21,13 @@
     "npm": "^5.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.24.1",
+    "del": "3.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-eslint": "4.0.0",
     "gulp-filenamelist": "1.1.1",
+    "gulp-plumber": "1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.3",
