--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ nbproject
 /eaton.core/target
 /eaton.ui.apps/target
 /eaton.ui.apps.html/target
-/eaton.frontend/build
+# /eaton.frontend/build
+
+## ClientLibs Created By Gulp Tasks
+/eaton.ui.apps.html/src/main/content/jcr_root/etc/designs/eaton-static/clientlibs/**
