--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "gulp",
     "maven": "cd ../ && mvn -PautoInstallPackage clean install",
+    "aemsync": "node config/aemsync",
     "aemdev": "gulp build:dev",
     "preaemprod": "npm install --no-optional",
     "aemprod": "gulp build:prod"
@@ -21,6 +22,7 @@
     "npm": "^5.0.0"
   },
   "devDependencies": {
+    "aemsync": "1.1.1",
     "babel-preset-es2015": "6.24.1",
     "del": "3.0.0",
     "gulp": "^3.9.1",
