--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -31,6 +31,7 @@
     "gulp-filenamelist": "1.1.1",
     "gulp-plumber": "1.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.3",
     "node-sass-globbing": "^0.0.23"
