--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -37,7 +37,5 @@
     "node-sass": "^4.5.3",
     "node-sass-globbing": "^0.0.23"
   },
-  "dependencies": {
-    "bootstrap-sass": "^3.3.7"
-  }
+  "dependencies": {}
 }
