--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "6.24.1",
     "del": "3.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "6.1.2",
     "gulp-eslint": "3.0.1",
     "gulp-plumber": "1.1.0",
