--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -29,6 +29,7 @@
     "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "6.1.2",
     "gulp-eslint": "3.0.1",
+    "gulp-if": "2.0.2",
     "gulp-plumber": "1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "1.3.2",
