[PL-Env] It Replaces ‘sasslint’ with ‘stylelint’ due to repeated gulp crashes and issues when compiling sass to css

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ nbproject
 *.map
 npm-debug.log
 .sass-cache
+.stylelintcache
 /eaton.core/target
 /eaton.ui.apps/target
 /eaton.ui.apps.html/target
