--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -6,6 +6,7 @@
   "author": "Razorfish",
   "scripts": {
     "start": "gulp",
+    "lint-fix": "stylelint \"src/**/*.scss\" --syntax scss --fix --cache --cache-location \".stylelintcache/\" --quiet",
     "maven": "cd ../ && mvn -PautoInstallPackage clean install",
     "aemsync": "node config/aemsync",
     "aemdev": "gulp build:dev",
@@ -32,10 +33,14 @@
     "gulp-if": "2.0.2",
     "gulp-plumber": "1.1.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sass-lint": "1.3.2",
+    "gulp-stylelint": "4.0.0",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.3",
-    "node-sass-globbing": "^0.0.23"
+    "node-sass-globbing": "^0.0.23",
+    "stylelint": "8.0.0",
+    "stylelint-config-sass-guidelines": "2.2.0",
+    "stylelint-scss": "1.5.1",
+    "stylelint-selector-bem-pattern": "1.1.0"
   },
   "dependencies": {}
 }
