--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -29,7 +29,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "6.1.2",
+    "gulp-consolidate": "0.2.0",
     "gulp-eslint": "3.0.1",
+    "gulp-iconfont": "8.0.1",
     "gulp-if": "2.0.2",
     "gulp-plumber": "1.1.0",
     "gulp-sass": "^3.1.0",
@@ -42,5 +44,7 @@
     "stylelint-scss": "1.5.1",
     "stylelint-selector-bem-pattern": "1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "4.17.4"
+  }
 }
