Update Maven NPM Script to only build /eaton.ui.static/ project

--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "gulp",
     "lint-fix": "stylelint \"src/**/*.scss\" --syntax scss --fix --cache --cache-location \".stylelintcache/\" --quiet",
-    "maven": "cd ../ && mvn -PautoInstallPackage clean install",
+    "maven": "cd ../eaton.ui.static/ && mvn -PautoInstallPackage clean install",
     "aemsync": "node config/aemsync",
     "aemdev": "gulp build:dev",
     "preaemprod": "npm install --no-optional",
