--- a/eaton.frontend/package.json
+++ b/eaton.frontend/package.json
@@ -38,6 +38,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-stylelint": "4.0.0",
     "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "6.5.1",
     "node-sass": "^4.5.3",
     "node-sass-globbing": "^0.0.23",
     "stylelint": "8.0.0",
